# FundamentalnieAlgoritmi

./: .gitignore  README.md
Semestr4/KursovoiProyekt/up_to_task_0/: CMakeLists.txt  main.cpp
Semestr4/KursovoiProyekt/up_to_task_0/.cache/clangd/index/: allocate_type_helper.h.B4B2AE2F5495CE7F.idx  associative_container.h.23DF8F2A9D5CB151.idx  avl_tree.h.98D134D24B038BF9.idx  basics.cpp.48303DFF64A48C5C.idx  basics.h.2167A061DD08912A.idx  binary_search_tree.h.E602DB4E38014065.idx  btree.h.5BB02287989BFBBB.idx  buddy_memory_allocator.cpp.EC3E81A8A61A2B1D.idx  buddy_memory_allocator.h.CE9A16BDC0535B37.idx  commands_creator.h.8EA06C2C8A49576C.idx  cpp_time.cpp.88330D660D08E51B.idx  cpp_time.h.A4DA116B9205B485.idx  interpritator.h.8252124A9ED82D6B.idx  json.hpp.1D14D4126A75CD4D.idx  logger.cpp.826E2279B94C010C.idx  logger.h.70DC5705E955B0AC.idx  logger_builder.cpp.A770B241231AD628.idx  logger_builder.h.2D48D511305D9EF0.idx  logger_helper.cpp.1C8A44817683218E.idx  logger_helper.h.7535869A89C61193.idx  main.cpp.28003612E9642106.idx  memory.cpp.758FA23654BD5E76.idx  memory.h.53F8020B1FC48B3F.idx  nmalloc.cpp.02BA5663C663D566.idx  (+25 more)
Semestr4/KursovoiProyekt/up_to_task_0/flyweight_string/: string_manager.cpp  string_manager.h
Semestr4/KursovoiProyekt/up_to_task_0/interpritator_manager/: interpritator.h
Semestr4/KursovoiProyekt/up_to_task_0/iterators_manager/: iterators.h
Semestr4/KursovoiProyekt/up_to_task_0/navl/: avl_tree.h
Semestr4/KursovoiProyekt/up_to_task_0/nbst/: associative_container.h  binary_search_tree.h  nmalloc.cpp  nmalloc.h
Semestr4/KursovoiProyekt/up_to_task_0/nbtree/: btree.h
Semestr4/KursovoiProyekt/up_to_task_0/nmemory/: standard_allocator.hpp
Semestr4/KursovoiProyekt/up_to_task_0/nmemory/nlogger/: standard_logger_builder.cpp
Semestr4/KursovoiProyekt/up_to_task_0/nsplay/: splay_tree.h
Semestr4/KursovoiProyekt/up_to_task_0/pipeline_manager/: commands_creator.h  pipeline.h  pipeline_base.h  pipeline_command_invoker.h  pipeline_comporators.cpp  pipeline_data_save.h  pipeline_interpriter.cpp  pipeline_interpriters.h  standard_pipeline_interpriter_commands.cpp  standard_pipeline_interpriter_commands.h  standard_pipeline_interpriter_kit.cpp  user_interpriter.cpp
Semestr4/LaboratorniyeRaboti/task11/: CMakeLists.txt  associative_container.cpp  binary_search_tree.h  main.cpp  nmalloc.h
Semestr4/LaboratorniyeRaboti/task11/nmemory/: memory.h  memory_boundary_descriptors.cpp
Semestr4/LaboratorniyeRaboti/task12/: CMakeLists.txt  main.cpp
Semestr4/LaboratorniyeRaboti/task12/navl/: avl_tree.cpp  avl_tree.h
Semestr4/LaboratorniyeRaboti/task12/nbst/: binary_search_tree.h  nmalloc.cpp
Semestr4/LaboratorniyeRaboti/task12/nmemory/: buddy_memory_allocator.cpp
Semestr4/LaboratorniyeRaboti/task12/nmemory/nlogger/: logger_builder.cpp
Semestr4/LaboratorniyeRaboti/task14/: CMakeLists.txt  main.cpp
Semestr4/LaboratorniyeRaboti/task14/nbst/: associative_container.h  binary_search_tree.h  nmalloc.h
Semestr4/LaboratorniyeRaboti/task14/nmemory/nlogger/: basics.cpp  cpp_time.h
Semestr4/LaboratorniyeRaboti/task14/nsplay/: splay_tree.h
Semestr4/LaboratorniyeRaboti/task15/: CMakeLists.txt  main.cpp
Semestr4/LaboratorniyeRaboti/task15/nbtree/: associative_container.h  btree.h
Semestr4/LaboratorniyeRaboti/task15/nmemory/nlogger/: logger.cpp  logger_helper.cpp
Semestr4/LaboratorniyeRaboti/task16/: CMakeLists.txt  main.cpp
Semestr4/LaboratorniyeRaboti/task16/nbtree_plus/: bplustree.h  nmalloc.cpp  nmalloc.h  output
Semestr4/LaboratorniyeRaboti/task16/nmemory/: memory.cpp
Semestr4/LaboratorniyeRaboti/task16/nmemory/nlogger/: cpp_time.cpp  standard_logger.h  standard_logger_builder.h
Semestr4/LaboratorniyeRaboti/task3/: CMakeLists.txt  main.cpp  sorted_list_memory.cpp  sorted_list_memory.h
Semestr4/LaboratorniyeRaboti/task3/nlogger/: standard_logger_builder.cpp
Semestr4/LaboratorniyeRaboti/task4/: CMakeLists.txt  main.cpp  memory.h  memory_boundary_descriptors.cpp  memory_boundary_descriptors.h  sorted_list_memory.cpp  sorted_list_memory.h
Semestr4/LaboratorniyeRaboti/task5/: CMakeLists.txt  buddy_memory_allocator.h  main.cpp
Semestr4/LaboratorniyeRaboti/task5/nlogger/: basics.h  logger.h
Semestr4/LaboratorniyeRaboti/task7/: CMakeLists.txt  main.cpp
Semestr4/LaboratorniyeRaboti/task7/nbigint/: karacuba.cpp  karacuba.h  standard_bigint.cpp  standard_bigint.h
Semestr4/LaboratorniyeRaboti/task8_vscode/: CMakeLists.txt  main.cpp
Semestr4/LaboratorniyeRaboti/task8_vscode/nbigint/: bigint.h  bigint_multiplication.h  fft.cpp  fft.h  karacuba.cpp  karacuba.h  standard_bigint.cpp  standard_bigint.h
Semestr4/LaboratorniyeRaboti/task8_vscode/nlogger/: logger_helper.h  standard_logger.cpp
Semestr4/client/: CMakeLists.txt  main.cpp
Semestr4/client/interpriter_manager/: interpriter.h  pipeline_interpriter.cpp  pipeline_interpriters.h  user_interpriter.cpp
Semestr4/client/ipc_manager/: semaphores.h  shared_memory.h  uuid_wrapper.h
Semestr4/client/pipeline_transfer/: pipeline_deserializer.cpp  pipeline_deserializer.h  pipeline_receiver.cpp  pipeline_receiver.h  pipeline_sender.cpp  pipeline_sender.h  pipeline_serializer.cpp  pipeline_serializer.h
Semestr4/client/transfer_manager/: standard_sender.h
Semestr4/server/: CMakeLists.txt  main.cpp
Semestr4/server/ipc_manager/: semaphores.cpp  semaphores.h  shared_memory.cpp  shared_memory.h
Semestr4/server/iterators_manager/: iterators.h
Semestr4/server/nbst/: binary_search_tree.h
Semestr4/server/nmemory/: sorted_list_memory.h
Semestr4/server/nmemory/nlogger/: cpp_time.h  logger_builder.h
Semestr4/server/pipeline_commands_manager/: base_command.h  command_invoker.h  commands_creator.h  pipeline_commands.cpp  pipeline_commands.h
Semestr4/server/pipeline_manager/: pipeline.h  pipeline_base.h  pipeline_data_save.h
Semestr4/server/pipeline_transfer/: pipeline_deserializer.cpp  pipeline_deserializer.h  pipeline_serializer.cpp  pipeline_serializer.h
Semestr4/server/storage_manager/: data_storage.cpp  data_storage.h
Semestr4/server/transfer_manager/: standard_receiver.h  standard_sender.h
(+507 files in other folders)
